language/move-lang/tests/move_check/expansion/duplicate_module.exp
error: 

   ┌── tests/move_check/expansion/duplicate_module.move:2:19 ───
   │
 2 │ module 0x8675309::M {}
   │                   ^ Duplicate definition for module '0x8675309::M'
   ·
 1 │ module 0x8675309::M {}
   │                   - Previously defined here
   │

