language/move-lang/tests/move_check/expansion/duplicate_module.move
module 0x8675309::M {}
module 0x8675309::M {}
